discussion/kv_engine/182676/182676_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54463: Add CDC test coverage for ActiveStream

By CDC enabled on a collection, DCP clients want to get all updates for
a given key from in their in-memory phase.

Given that in CM we disable deduplication by inserting multiple
revisions for the same key into different checkpoints, then DCP clients
see those updates in distinct snapshots.

Change-Id: I6308789a550e7052e8cf42080ebc751e6cf239c4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-11-25 10:17:02.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 10:17:17.000000000
Message: 
Patch Set 7: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326402/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 10:22:18.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/578/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/578/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/824/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/824/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/588/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/588/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/567/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/567/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/587/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/587/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/561/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/561/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/569/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4984:14: error: no member named "addWithHistory" in "CollectionsManifest" [clang-diagnostic-error]
    manifest.addWithHistory(CollectionEntry::vegetable, false /*history*/);
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4985:14: error: no member named "addWithHistory" in "CollectionsManifest" [clang-diagnostic-error]
    manifest.addWithHistory(CollectionEntry::fruit, true /*history*/);
             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/569/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:4984:14:
error: no member named "addWithHistory" in "CollectionsManifest" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/569/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21404/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
